# bare-rust

./: .gitignore  CODEOWNERS  Cargo.toml  Makefile
.github/workflows/: ci.yaml
bsp/: Cargo.toml
bsp/src/: board.rs
crates/cupcake/: Cargo.toml  README.md
crates/cupcake/src/: ev13.rs  main.rs
crates/mgmt/src/: main.rs
crates/ui/src/: main.rs
hal/: Cargo.toml
mgmt/: Cargo.toml  mem072.x
neo/mgmt-cots/: Cargo.toml  README.md
neo/mgmt-cots/.cargo/: config.toml
neo/mgmt-cots/src/: app.rs  main.rs
neo/mgmt-cots/src/board/: led.rs  mod.rs
neo/mgmt-stm32/: Cargo.toml  Makefile  build.rs
neo/mgmt-stm32/src/: main.rs  startup.rs  svd.rs
neo/mgmt-stm32/src/board/: led.rs  mod.rs
neo/mgmt-stm32/src/hal/: clock.rs  gpio.rs  mod.rs  uart.rs
neo/svdgen/: Cargo.toml  README.md
neo/svdgen/src/: lib.rs  main.rs
neo/ui-stm32/: Cargo.toml  build.rs
neo/ui-stm32/src/: main.rs  svd.rs
neo/ui-stm32/src/board/: button.rs  led.rs  mod.rs
neo/ui-stm32/src/hal/: clock.rs  gpio.rs
ui/: Cargo.toml
ui/src/: channel.rs  dispatch.rs  fib.rs  main.rs  msg.rs  semihost.rs  stack.rs  startup.rs  vec.rs
ui/src/tasks/: buttons_task.rs  fib_task.rs  metrics_task.rs  mod.rs  no_task.rs
