[workspace]
members = ["ui","hal","bsp","mgmt",]
default-members = ["ui","mgmt"]
resolver = "2"

[workspace.package]
#name = "bare-rust"
authors = ["Cullen Jennings <fluffy@iii.ca>"]
version = "0.1.1"
repository = "git@github.com:fluffy/bare-rust.git"
license = "BSD-2-Clause"

[workspace.dependencies]
# local crates
hal = { path = "./hal", version = "0.0.0" }
bsp = { path = "./bsp", version = "0.0.0" }


[profile.release]
debug = "limited"
#opt-level = "s"
opt-level = 3
lto = "fat"
panic = "abort"

[profile.dev]
#opt-level = 3
#opt-level = "s"
opt-level = 1
debug = true
strip = "none"
lto = "fat"
panic = "abort"
